--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>{{ page.title }} - {{site.title}}</title>
-</head>
-<body>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-  {{ content }}
+  {%- include head.html -%}
 
-</body>
+  <body>
+
+    {%- include header.html -%}
+
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
+  </body>
+
 </html>
