--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col one-half">
-      <h2 class="footer-heading">{{ site.title | escape }}</h2>
+      <!--<h2 class="footer-heading">{{ site.title | escape }}</h2>-->
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
@@ -14,9 +14,9 @@
               {{ site.title | escape }}
             {%- endif -%}
             </li>
-            {%- if site.email -%}
+            <!--{%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+            {%- endif -%}-->
         </ul>
       </div>
 
