--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,10 @@
               {{ site.title | escape }}
             {%- endif -%}
             </li>
-            <!--{%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}-->
+            {%- if site.email -%}
+              {{ site.email | escape }}
+            <!--<li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>-->
+            {%- endif -%}
         </ul>
       </div>
 
