--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,7 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
-      <div class="footer-col one-half">
-      <!--<h2 class="footer-heading">{{ site.title | escape }}</h2>-->
+      <!--div class="footer-col one-half">
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
@@ -16,18 +15,17 @@
             </li>
             {%- if site.email -%}
               {{ site.email | escape }}
-            <!--<li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>-->
             {%- endif -%}
         </ul>
-      </div>
+      </div-->
 
       <div class="footer-col one-half">
         <p>{{- site.description | escape -}}</p>
       </div>
 
-      <div class="social-links">
+      <!--div class="social-links">
         {%- include social.html -%}
-      </div>
+      </div-->
     </div>
 
   </div>
