--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,7 @@
 
       <div class="footer-col one-half">
         <p>{{- site.description | escape -}}</p>
+        <p>{{- site.date | escape -}}</p>
       </div>
 
       <!--div class="social-links">
