--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,8 @@
 
       <div class="footer-col one-half">
         <ul>
-          {{ site.description | escape }}
-          {{ site.date | escape }}
+          <p>{{ site.description | escape }}</p>
+          <p>{{ site.date | escape }}</p>
         </ul>
       </div>
 
