--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,10 +20,11 @@
       </div-->
 
       <div class="footer-col one-half">
-        <ul>
-          <p>{{ site.description | escape }}</p>
-          <p>{{ site.date | escape }}</p>
-        </ul>
+        <p>{{ site.description | escape }}</p>
+      </div>
+
+      <div class="footer-col one-half">
+        <p>{{ site.date | escape }}</p>
       </div>
 
       <!--div class="social-links">
