--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -417,6 +417,7 @@ ul.task-list input[type="checkbox"] {
   .contact-icons {
     font-size: 1.5rem;
     margin-top: 0.2rem;
+    margin-bottom: 3rem;
     display: flex;
     justify-content: center;
     gap: 1.5rem;
