--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,6 +2,8 @@
  * Styles for the base elements of the theme.
  ******************************************************************************/
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
 // Typography
 
 p,
@@ -201,7 +203,7 @@ ul.task-list input[type="checkbox"] {
   .more-info {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
 
     p {
       display: inline-block;
@@ -416,8 +418,8 @@ ul.task-list input[type="checkbox"] {
 
   .contact-icons {
     font-size: 1.5rem;
-    margin-top: 0.2rem;
-    margin-bottom: 3rem;
+    // margin-top: 0.2rem;
+    // margin-bottom: 3rem;
     display: flex;
     justify-content: center;
     gap: 1.5rem;
@@ -426,13 +428,13 @@ ul.task-list input[type="checkbox"] {
       img {
         width: 2rem;
         height: 2rem;
-        margin-bottom: 2rem;
+        // margin-bottom: 2rem;
       }
 
       svg {
         width: 2rem;
         height: 2rem;
-        margin-bottom: 1rem;
+        // margin-bottom: 1rem;
 
         image {
           width: 2rem;
@@ -1434,7 +1436,7 @@ figure.cover {
   }
 
   figcaption.abandoned {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #ee5f5b;
@@ -1442,28 +1444,28 @@ figure.cover {
 
   figcaption.finished,
   figcaption.watched {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #62c462;
   }
 
   figcaption.interested {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #7691db;
   }
 
   figcaption.paused {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #bdac7e;
   }
 
   figcaption.queued {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #9e76b5;
@@ -1471,7 +1473,7 @@ figure.cover {
 
   figcaption.reading,
   figcaption.watching {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #f89406;
@@ -1479,14 +1481,14 @@ figure.cover {
 
   figcaption.reread,
   figcaption.rewatch {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #a6517d;
   }
 
   figcaption.uncategorized {
-    font-family: monospace;
+    font-family: 'Inter', sans-serif;
     color: #23212d;
     text-transform: uppercase;
     background-color: #b0abb3;
@@ -1521,4 +1523,3 @@ h2, h3 {
 body {
   font-size: 0.9rem;
 }
-
