--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -66,7 +66,7 @@ layout: default
       {% include selected_papers.liquid %}
     {% endif %}
 
-    <p style="font-size: 0.7rem; margin-top: 2rem;">
+    <p style="font-size: 0.7rem; margin-top: 2rem; text-align: center;">
       &copy; Copyright {{ site.time | date: '%Y' }}
       {{ site.first_name }}
       {{ site.middle_name }}
