--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -32,6 +32,7 @@
       {% endunless %}
     {% endif %}
     <img
+      style="display: block; margin: auto;"
       src="{% if include.url %}{{ include.url }}{% elsif include.cache_bust %}{{ include.path | relative_url | bust_file_cache }}{% else %}{{ include.path | relative_url }}{% endif %}"
       {% if include.class %}
         class="{{ include.class }}"
