--- a/_layouts/distill.liquid
+++ b/_layouts/distill.liquid
@@ -23,14 +23,7 @@
             "authors": [
               {% for author in page.authors %}
               {
-                "author": "{{ author.name }}",
-                "authorURL": "{{ author.url }}",
-                "affiliations": [
-                  {
-                    "name": "{{ author.affiliations.name }}",
-                    "url": "{{ author.affiliations.url }}"
-                  }
-                ]
+                "author": "{{ author.name }}"
               }{% if forloop.last == false %},{% endif %}
               {% endfor %}
             ],
