--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -933,6 +933,7 @@ pre {
     border-radius: 0;
     margin-bottom: 0;
     padding: 0;
+    white-space: inherit;
   }
 }
 
@@ -1214,9 +1215,17 @@ nav[data-toggle="toc"] {
   display: none !important;
 }
 
-.medium-zoom-overlay,
+.medium-zoom-overlay {
+  z-index: 999;
+}
+
 .medium-zoom-image--opened {
   z-index: 999;
+  max-height: calc(100vh - 40px) !important;
+  max-width: calc(100vw - 20px) !important;
+  margin: 10px auto !important; // Add top and bottom margin
+  padding: 0 15px !important; // Match footer height
+  object-fit: contain !important; // Ensure image fits within bounds
 }
 
 #toc-sidebar {
